add udp echo client/server
This is of course adapted from the getaddrinfo() man page. For the
server, I've added a function that gets and displays the IP

--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,8 @@ example = [
   'tcp_file_transfer_server',
   'tcp_chat_client',
   'tcp_chat_server',
+  'udp_echo_client',
+  'udp_echo_server'
   ]
 
 foreach file : example
