--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,7 +38,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Install dependencies
-      run: sudo apt-get install -y meson
+      run: |
+        sudo apt-get install -y python3-pip python3-setuptools
+        sudo -H python3 -m pip install meson ninja
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
