--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        sudo apt-get install -y python3-pip python3-setuptools
+        sudo apt-get install -y python3-pip python3-setuptools valgrind
         sudo -H python3 -m pip install meson ninja
     - name: configure
       run: meson builddir
@@ -24,4 +24,4 @@ jobs:
     - name: test
       run: |
         cd builddir
-        meson test -v
+        meson test -v --setup=valgrind
